# Chora

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Crafting a Production-Grade Claude Skill.md  Migrating Cover Generation Skill.md  batch_process.py  batch_rewrite.py  clean_tags.py  config_loader.py  content_export.json  episode_page.html  export_to_json.py  feishu_service.py  fetch_feed.py  findings.md  generate_cover.py  generate_frontend_data.py  inspect_page.py  normalize_tags.py  package-lock.json  package.json  page.html  process_feed.py  process_podcast.py  process_video.py  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  rewrite_service.py  stock_cover_service.py  sync_covers.py  task_plan.md  test_audio.m4a  update_list.json  xiaoyuzhou_service.py  youtube_service.py
.agent/workflows/: generate-cover-baoyu.md  process-subscriptions.md  process-url.md  regenerate-covers.md  sync-feishu.md
.baoyu-skills/baoyu-cover-image/: EXTEND.md
.github/workflows/: ci.yml
config/: feishu-setup.md  rewrite-prompt.md  sources.example.yaml  state.yaml  vercel-deploy-guide.md  vercel.yaml
conversations/conv-1777962233019/: process-url.md
distribution_pipeline/: __init__.py  automation.py  generate_distribution.py
distribution_pipeline/assets/: __init__.py  downloader.py  image_assets.py  providers.py
distribution_pipeline/directors/: __init__.py  card_copy.py  style_loader.py  visual_brief.py  visual_system.py
distribution_pipeline/extractors/: __init__.py  insight_parser.py  metadata_parser.py  package_builder.py
distribution_pipeline/renderers/: __init__.py  html_renderer.py  html_to_image.py  manifest.py  platform_specs.py  templates.py  wechat_renderer.py  xhs_copy.py  xhs_plan.py  xhs_renderer.py
distribution_pipeline/reviewers/: __init__.py  repetition.py  text_density.py
distribution_pipeline/styles/: chora-editorial.yaml  literary-poster.yaml  techno-critical.yaml
docs/: PRD.md  distribution-pipeline.md  guizang-recipe-coverage.md  guizang-upstream-integration-todo.md  guizang-workflow-rules.md
docs/plans/: 2026-05-26-distribution-asset-pipeline.md  2026-05-31-guizang-renderer-integration.md
docs/reports/: 2026-07-11-project-status.md  2026-07-12-feishu-fixes.md  2026-07-12-t22-e2e.md
feishu/: __init__.py  _auth.py  _client.py  _fields.py  _records.py  _sync.py  _uploads.py
frontend/: DEPLOY.md  app.js  index.html  package.json  styles.css  vercel.json
frontend/api/: content.js  image.js
frontend/data/: content.json  summary.json
frontend/public/: app.js  index.html
generate_cover/: __init__.py  _infra.py  image.py  palettes.py  pipeline.py  style.py  title.py
skills/: ARCHITECTURE.md
skills/content-feed-summarizer/: SKILL.md  distribution-config.yaml  setup.md
skills/distribute-content/: SKILL.md
skills/process-subscriptions/: SKILL.md
skills/process-url/: SKILL.md
styles/: chora-style.md
tests/: conftest.py  test_stock_cover_service.py  test_xiaoyuzhou_service.py
tests/distribution_pipeline/: test_ai_image_gateway.py  test_card_copy.py  test_feishu_mixins.py  test_generate_distribution_cli.py  test_guizang_category_router.py  test_guizang_content_allocator.py  test_guizang_copy_contract.py  test_guizang_exporter.py  test_guizang_page_planner.py  test_guizang_recipes.py  test_guizang_render_script.py  test_guizang_renderer.py  test_guizang_screenshot_treatment.py  test_guizang_subject_mapper.py  test_guizang_template_loader.py  test_guizang_theme.py  test_guizang_title_breaker.py  test_guizang_title_budget.py  test_guizang_validator.py  test_guizang_vendor.py  test_guizang_vision_subject_mapper.py  test_guizang_wechat_renderer.py  test_html_renderer.py  test_html_to_image.py  test_image_assets.py  test_image_providers.py  test_insight_parser.py  test_manifest.py  test_metadata_parser.py  test_package_builder.py  test_platform_specs.py  test_repetition.py  test_style_loader.py  test_text_density.py  test_visual_brief.py  test_visual_system.py  test_wechat_renderer.py  test_xhs_copy.py  (+2 more)
utils/: archive_cleanup.py  content_validator.py  word_count.py
(+61 files in other folders)
